--- a/frontend/assets/css/tailwind.css
+++ b/frontend/assets/css/tailwind.css
@@ -1,17 +1,7 @@
-
+@import "tailwindcss";
 @import "tw-animate-css";
 
-@import 'tailwindcss/theme' layer(theme) theme(static);
-@import 'tailwindcss/preflight' layer(base);
-@import 'tailwindcss/utilities' layer(utilities);
-
 @custom-variant dark (&:is(.dark *));
-
-@layer theme, base, components, utilities;
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @theme inline {
   --color-background: var(--background);
@@ -105,8 +95,8 @@
   --accent-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.396 0.141 25.723);
   --destructive-foreground: oklch(0.637 0.237 25.331);
-  --border: oklch(0.269 0 0);
-  --input: oklch(0.269 0 0);
+  --border: oklch(45.678% 0.00005 271.152);
+  --input: oklch(41.654% 0.00005 271.152);
   --ring: oklch(0.439 0 0);
   --chart-1: oklch(0.488 0.243 264.376);
   --chart-2: oklch(0.696 0.17 162.48);
